# decomposition-viewer-jni

./: .gitmodules  CMakeLists.txt  README.md  bin2cpp.c
src/: jclass.h  jni.cpp  triangulation.h
src/glsl/: edge.frag  flat.frag  main.vert  triangle-vertex.geom  triangle.frag
src/vulkan/: graphic-settings.h  include.h  jawt-renderer.cpp  jawt-renderer.h  physical-device-properties.h  renderer.h  rendering-context.h  shader-module.h  swapchain.h  vma.h  vulkan.cpp
